[gd_scene load_steps=4 format=2]

[ext_resource path="res://Yard.gd" type="Script" id=1]
[ext_resource path="res://yard.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[node name="Yard" type="Node2D"]
script = ExtResource( 1 )

[node name="YardTexture" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )

[node name="BuildingCostLabel" type="Label" parent="."]
visible = false
margin_left = -50.0
margin_top = 30.0
margin_right = -3.0
margin_bottom = 50.0
text = "0$"
align = 2
valign = 1

[node name="LandCostLabel" type="Label" parent="."]
margin_left = -50.0
margin_top = 10.0
margin_right = -3.0
margin_bottom = 30.0
text = "0$"
align = 2
valign = 1

[node name="TimerUpdateLabel" type="Timer" parent="."]
autostart = true

[node name="ExpectedRentLabel" type="Label" parent="."]
margin_top = -20.0
margin_right = 57.0
text = "0$"
align = 2
valign = 1

[node name="TimerBuildHouse" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -20, -20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 50, 50 )
shape = SubResource( 1 )

[node name="NameLabel" type="Label" parent="."]
margin_top = 60.0
margin_right = 40.0
margin_bottom = 74.0
text = "NAME"
[connection signal="tree_exiting" from="." to="." method="_on_Yard_tree_exiting"]
[connection signal="pressed" from="YardTexture" to="." method="_on_YardTexture_pressed"]
[connection signal="timeout" from="TimerUpdateLabel" to="." method="_on_TimerUpdateLabel_timeout"]
[connection signal="timeout" from="TimerBuildHouse" to="." method="_on_TimerBuildHouse_timeout"]
